# zaphenath-cli-client

./: .env.test.example  .gitignore  Cargo.toml  Makefile  README.md
abi/: Zaphenath.json
src/: config.rs  main.rs
src/cmd/: mod.rs  types.rs
src/cmd/config/: mod.rs
src/cmd/contract/: create_key.rs  delete_key.rs  mod.rs  ping.rs  read.rs  remove_custodian.rs  set_custodian.rs  update.rs
src/cmd/daemon/: logs.rs  mod.rs  run.rs  stop.rs
src/contract/: create_key.rs  delete_key.rs  mod.rs  network.rs  ping.rs  read.rs  remove_custodian.rs  set_custodian.rs  types.rs  update.rs
tests/: config.rs  contract_create_key.rs  contract_delete_key.rs  contract_ping_key.rs  contract_read_key.rs  contract_remove_custodian.rs  contract_set_custodian.rs  contract_update_key.rs  daemon_creates_logs_file.rs  daemon_detached.rs  daemon_updates_ping_timestamp.rs
