[package]
name = "zaph"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
nix = { version = "0.30.1", features = ["signal"] }
secp256k1 = "0.31.0"
serde = "1.0.219"
serde_json = "1.0.140"
shellexpand = "3.1.1"
tiny-keccak = "2.0.2"
tokio = "1.45.1"
web3 = "0.19.0"
which = "8.0.0"

[dev-dependencies]
tempfile = "3.20.0"
